--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,53 +75,68 @@ body {
 
 	.user-info {
 		padding-top: 1rem;
-		font-size: 2.5em;
 	}
 }
 
 #work {
 	padding: 3rem 0;
+
 	.container  {
 		padding: 2rem 0;
 
 	}
 
 	.card-body {
+		h2, h5 {color: $background; line-height: 160px; text-align: center;}
+		position: relative;
 		height: 200px;
+	}
+
+	.card-body:hover {
+		cursor: pointer;
 	}
 
 	span {
 		font-size: .8rem;
 	}
 
-	.btn:focus {
-		outline: 0;
+	.overlay {
+		position: absolute;
+		background: $background;
+		opacity: 0.9;
+		width: 100%;
+		height: 0;
+		top: 0;
+		left: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		transition: all 0.5s ease-in-out;
+
+		.btn {
+			opacity: 0;
+			margin-left: .2rem;
+		}
+
+		.btn:hover {
+			cursor: pointer;
+		}
 	}
 
-	.btn:hover {
-		animation: animate 0.4s;
-		cursor: pointer;
+	.card-footer {
 
+		.btn:hover {
+			animation: animate 0.4s;
+			cursor: pointer;
+
+		}
 	}
-
 
 	@keyframes animate{
 		to {transform: rotate(0deg);}
 		from {transform: rotate(360deg);}
 	}
 
-}
-
-.modal-content {
-	background-color: #eee;
-
-	.modal-header{
-		color: $background;
-	}
-
-	.modal-body img {
-		margin-bottom: 10px;
-	}
 }
 
 #skills {
@@ -193,17 +208,31 @@ footer {
     }
 
     .web-links button {
-        border-radius: 50%;
+		border-radius: 50%;
         margin-left: .4rem;
-        transition: opacity .5s ease-in-out;
+        transition: all 0.4s linear;
     }
 
     .web-links button:hover {
+		color: #eee;
+		background: $background;
         opacity: 0.8;
         cursor: pointer;
     }
 }
 
+
+.modal-content {
+	background-color: #eee;
+
+	.modal-header{
+		color: $background;
+	}
+
+	.modal-body img {
+		margin-bottom: 10px;
+	}
+}
 
 .top-slide {
 	top: -50px;
@@ -240,8 +269,18 @@ footer {
 //for small screens
 @media (max-width: 500px) {
 
-	.navbar-brand i {
-		display: none;
+	#header {
+
+		img {
+			margin-top: 120px;
+			width: 150px;
+			height: 150px;
+			border-radius: 50%;
+		}
+
+		.user-info {
+			font-size: 2em;
+		}
 	}
 
 	.headings {
