--- a/css/style.css
+++ b/css/style.css
@@ -50,20 +50,41 @@ body {
     height: 200px;
     border-radius: 50%; }
   #header .user-info {
-    padding-top: 1rem;
-    font-size: 2.5em; }
+    padding-top: 1rem; }
 
 #work {
   padding: 3rem 0; }
   #work .container {
     padding: 2rem 0; }
   #work .card-body {
+    position: relative;
     height: 200px; }
+    #work .card-body h2, #work .card-body h5 {
+      color: #18bc9c;
+      line-height: 160px;
+      text-align: center; }
+  #work .card-body:hover {
+    cursor: pointer; }
   #work span {
     font-size: .8rem; }
-  #work .btn:focus {
-    outline: 0; }
-  #work .btn:hover {
+  #work .overlay {
+    position: absolute;
+    background: #18bc9c;
+    opacity: 0.9;
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s ease-in-out; }
+    #work .overlay .btn {
+      opacity: 0;
+      margin-left: .2rem; }
+    #work .overlay .btn:hover {
+      cursor: pointer; }
+  #work .card-footer .btn:hover {
     animation: animate 0.4s;
     cursor: pointer; }
 
@@ -72,13 +93,6 @@ body {
     transform: rotate(0deg); }
   from {
     transform: rotate(360deg); } }
-
-.modal-content {
-  background-color: #eee; }
-  .modal-content .modal-header {
-    color: #18bc9c; }
-  .modal-content .modal-body img {
-    margin-bottom: 10px; }
 
 #skills {
   padding: 3rem 0; }
@@ -127,11 +141,20 @@ footer .web-links h4 {
 footer .web-links button {
   border-radius: 50%;
   margin-left: .4rem;
-  transition: opacity .5s ease-in-out; }
+  transition: all 0.4s linear; }
 
 footer .web-links button:hover {
+  color: #eee;
+  background: #18bc9c;
   opacity: 0.8;
   cursor: pointer; }
+
+.modal-content {
+  background-color: #eee; }
+  .modal-content .modal-header {
+    color: #18bc9c; }
+  .modal-content .modal-body img {
+    margin-bottom: 10px; }
 
 .top-slide {
   top: -50px;
@@ -160,7 +183,12 @@ footer .web-links button:hover {
   opacity: 0.8; }
 
 @media (max-width: 500px) {
-  .navbar-brand i {
-    display: none; }
+  #header img {
+    margin-top: 120px;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%; }
+  #header .user-info {
+    font-size: 2em; }
   .headings {
     font-size: 1.7em; } }
